b=295302, canvas drawImage fix, and gtk crash fix, r=pavlov,a=chofmann